# telebot2

./: .gitignore  __init__.py  add_db.py  bot.py  completion_validator.py  db.py  main.py  models.py  openai_api.py  pyproject.toml  requirements.txt  settings.py  start.py  voice.py
